Use HTTPS for links
Resolves #38

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
 
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/flexslider.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
 
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/jquery.height.js"></script>
@@ -65,7 +65,7 @@
       <h1 class="tfs-logo">The Finishing Suite</h1>
       <ul class="social">
         <li class="facebook">
-          <a href="http://www.facebook.com/thefinishingsuite" target="_blank"><img src="images/facebook.png" alt="Facebook"/></a>
+          <a href="https://www.facebook.com/thefinishingsuite" target="_blank"><img src="images/facebook.png" alt="Facebook"/></a>
         </li>
       </ul>
     </div>
@@ -89,7 +89,7 @@
       <p>Here, your work won't be forced through a cookie-cutter pipeline. Meeting technical specifications should be a given, not the end game — I'm passionate about using the finishing process to tastefully enhance your storytelling.</p>
       <p>The Finishing Suite is conveniently right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
 
-      <a href="www.imdb.com/name/nm1403724/" target="_blank">
+      <a href="https://www.imdb.com/name/nm1403724" target="_blank">
         <img class="img--round" src="images/alastair.jpg" alt="Alastair Tye Samson" />
         <h2>
           Alastair Tye Samson
@@ -371,7 +371,7 @@
       <p class="footer-links">
         <a href='m&#97;ilt&#111;&#58;&#37;6&#49;la&#115;%&#55;4a%69r&#64;t&#104;ef%69nis&#104;in&#103;su&#105;&#37;&#55;4&#37;&#54;5&#46;co&#46;n%&#55;A'>alastair&#64;t&#104;ef&#105;&#110;ishing&#115;&#117;&#105;te&#46;co&#46;&#110;z</a>
         <a href="tel:006421369544">+64 21 369 544</a>
-        <a href="http://www.facebook.com/thefinishingsuite" target="_blank">facebook.com/thefinishingsuite</a>
+        <a href="https://www.facebook.com/thefinishingsuite" target="_blank">facebook.com/thefinishingsuite</a>
       </p>
 
       <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
