Fix deliverables download
Fixes #34

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="the finishing suite | Boutique post-production in Ponsonby, Auckland">
   <meta property="og:description" content="The story of Jacob, a man whose life is stolen when he is inexplicably recast by a shadowy agency. When the actor who takes his place rekindles a long lost love, Jacob will do whatever it takes to fight for the role of his life.">
   <meta property="og:image" content="http://www.jakethemovie.com/images/aboutSmall.jpg">
-  <meta property="og:url" content="http://www.jakethemovie.com/">
+  <meta property="og:url" content="https://www.thefinishingsuite.co.nz/">
   <meta property="og:type" content="website">
 
   <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
@@ -27,7 +27,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -73,10 +72,10 @@
 
   <div id="menu">
     <nav class="nav" id="nav">
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#footer">Contact</a>
+      <a href="#about" data-scroll>About</a>
+      <a href="#services" data-scroll>Services</a>
+      <a href="#portfolio" data-scroll>Portfolio</a>
+      <a href="#footer" data-scroll>Contact</a>
       <a href="docs/tfs_requirements_for_delivery.pdf" target="_blank">Deliverables</a>
     </nav>
   </div>
