--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/flexslider.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
 </head>
@@ -183,7 +184,7 @@
         </li>
 
         <li>
-          <a href="https://www.youtube.com/watch?v=RDqPPi2yblM" target="_blank">
+          <a href="https://www.youtube.com/watch?v=RDqPPi2yblM" class="popup">
             <img class="slide-image" src="images/slides/forensics.jpg" alt="Forensics" />
             <div class="slide-text">
               <div class="slide-text-bg"></div>
@@ -315,7 +316,7 @@
         </li>
 
         <li>
-          <a href="https://www.youtube.com/watch?v=WAbL7ozWQCM" target="_blank">
+          <a href="https://www.youtube.com/watch?v=WAbL7ozWQCM" class="popup">
             <img class="slide-image" src="images/slides/prouds_something_new.jpg" alt="Prouds Something New" />
             <div class="slide-text">
               <div class="slide-text-bg"></div>
@@ -365,8 +366,8 @@
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/jquery.scroll.js"></script>
   <script type="text/javascript" src="js/jquery.stuck.js"></script>
-  <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
-  <script type="text/javascript" src="js/jquery.magnific-popup.js"></script>
+  <script type="text/javascript" src="js/jquery.flexslider.min.js"></script>
+  <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
   <script type="text/javascript">
     $(function() {
       $('.slide-image').each(function (i, el) {
@@ -378,7 +379,7 @@
       });
 
       $('.flexslider').flexslider({
-        slideshow: true
+        slideshow: false
       });
 
       $('.popup').magnificPopup({
