--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/flexslider.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
 </head>
@@ -140,7 +141,7 @@
 
       <ul class="slides" title="Click for high resolution image">
         <li>
-          <a href="https://www.youtube.com/watch?v=Kp4y0zUsKrA" target="_blank">
+          <a href="https://www.youtube.com/watch?v=Kp4y0zUsKrA" class="popup">
             <img class="slide-image" src="images/slides/wanted_season_2.jpg" alt="Wanted Season 2" />
             <div class="slide-text">
               <div class="slide-text-bg"></div>
@@ -183,7 +184,7 @@
         </li>
 
         <li>
-          <a href="https://www.youtube.com/watch?v=RDqPPi2yblM" target="_blank">
+          <a href="https://www.youtube.com/watch?v=RDqPPi2yblM" class="popup">
             <img class="slide-image" src="images/slides/forensics.jpg" alt="Forensics" />
             <div class="slide-text">
               <div class="slide-text-bg"></div>
@@ -315,7 +316,7 @@
         </li>
 
         <li>
-          <a href="https://www.youtube.com/watch?v=WAbL7ozWQCM" target="_blank">
+          <a href="https://www.youtube.com/watch?v=WAbL7ozWQCM" class="popup">
             <img class="slide-image" src="images/slides/prouds_something_new.jpg" alt="Prouds Something New" />
             <div class="slide-text">
               <div class="slide-text-bg"></div>
@@ -365,9 +366,10 @@
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/jquery.scroll.js"></script>
   <script type="text/javascript" src="js/jquery.stuck.js"></script>
-  <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
+  <script type="text/javascript" src="js/jquery.flexslider.min.js"></script>
+  <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
   <script type="text/javascript">
-    $(window).load(function () {
+    $(function() {
       $('.slide-image').each(function (i, el) {
         var $img = $(el),
           $bg = $img.siblings('.slide-text').children('.slide-text-bg'),
@@ -375,10 +377,21 @@
 
         $bg.css('background-image', `url(${src})`);
       });
+
       $('.flexslider').flexslider({
-        slideshow: true
+        slideshow: false
+      });
+
+      $('.popup').magnificPopup({
+        disableOn: 700,
+        type: 'iframe',
+        mainClass: 'mfp-fade',
+        removalDelay: 160,
+        preloader: false,
+        fixedContentPos: false
       });
     });
+
   </script>
 
 </body>
