--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,15 @@
     &noscript=1"/>
   </noscript>
   <!-- End Facebook Pixel Code -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113963695-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-113963695-1');
+  </script>
 </head>
 
 <body data-spy="scroll" data-target="menu">
