Remove Jake content
Fixes #24

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <title>the finishing suite | Boutique post-production in Ponsonby, Auckland</title>
-  <meta name="description" content="The story of Jacob, a man whose life is stolen when he is inexplicably recast by a shadowy agency. When the actor who takes his place rekindles a long lost love, Jacob will do whatever it takes to fight for the role of his life."/>
+  <meta name="description" content="Boutique post-production in Ponsonby, Auckland."/>
   <meta charset="UTF-8">
   <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 
   <meta property="og:site_name" content="the finishing suite">
-  <meta property="og:title" content="the finishing suite | Boutique post-production in Ponsonby, Auckland">
-  <meta property="og:description" content="The story of Jacob, a man whose life is stolen when he is inexplicably recast by a shadowy agency. When the actor who takes his place rekindles a long lost love, Jacob will do whatever it takes to fight for the role of his life.">
-  <meta property="og:image" content="http://www.jakethemovie.com/images/aboutSmall.jpg">
+  <meta property="og:title" content="The Finishing Suite">
+  <meta property="og:description" content="Boutique post-production in Ponsonby, Auckland.">
+  <meta property="og:image" content="https://www.thefinishingsuite.co.nz/images/tfs_logo.png">
   <meta property="og:url" content="https://www.thefinishingsuite.co.nz/">
   <meta property="og:type" content="website">
 
