--- a/src/index.html
+++ b/src/index.html
@@ -392,7 +392,7 @@
 
   </footer>
 
-  <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/jquery.scroll.js"></script>
   <script type="text/javascript" src="js/jquery.stuck.js"></script>
   <script type="text/javascript" src="js/jquery.flexslider.min.js"></script>
