--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="css/gridder.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/gridder.min.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -67,7 +67,7 @@
   </script>
 </head>
 
-<body data-spy="scroll" data-target="menu">
+<body class="bg-black text-white" data-spy="scroll" data-target="menu">
 
   <header class="header">
     <div class="content">
